--- a/chat-app/package.json
+++ b/chat-app/package.json
@@ -17,6 +17,8 @@
     "firebase": "^9.9.2"
   },
   "devDependencies": {
+    "@types/node": "^16.11.7",
+    "@types/react": "^18.0.8",
     "autoprefixer": "^10.4.7",
     "electron": "^18.2.0",
     "electron-builder": "^23.0.3",
@@ -25,6 +27,7 @@
     "postcss": "^8.4.13",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.0.24",
+    "typescript": "^4.6.4"
   }
 }
