--- a/chat-app/package.json
+++ b/chat-app/package.json
@@ -11,6 +11,9 @@
     "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
+    "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "dotenv": "^16.0.1",
     "electron-serve": "^1.1.0",
     "electron-store": "^8.0.1",
